--- a/Amateur-Movie-Database-Backend/src/main/resources/application.properties
+++ b/Amateur-Movie-Database-Backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/imdb_fake
-spring.datasource.username=amdb_backend
-spring.datasource.password=FMn8Qy86y95cbRLV
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
